# wallet-app-test-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tree.txt  Тестовое задание pyton (django) june+.docx
app/: .env  main.py  prestart.sh  pytest.ini  tree.txt
app/alembic/: env.py
app/alembic/versions/: 8747c42bc331_test_data.py  e032f2b2bb3d_initial.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  wallets.py
app/core/: config.py
app/core/models/: __init__.py  base.py  operation.py  wallet.py
app/core/models/mixins/: __init__.py  int_id_pk.py  uuid.py
app/core/schemas/: operation.py  wallet.py
app/crud/: operations.py  wallets.py
app/database/: db_helper.py
app/tests/: conftest.py  mock_crud.py  mock_data.py  mock_operation.py  mock_wallet.py  test_api.py
app/tests/test_api/: test_create_wallet.py  test_create_wallet_operation.py  test_delete_wallet.py  test_get_all_wallets.py  test_get_wallet_balance.py  test_get_wallet_operations.py
app/tests/test_config/: test_config.py  test_operation.py  test_wallet.py
app/utils/: __init__.py  operations.py
